k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  labels:
    name: echo-ingress
spec:
  tls:
    - hosts:
        - echo.test
  rules:
  - host: echo.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-service
            port: 
              number: 80
